# tle-sat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  noxfile.py  pyproject.toml
.github/: README.md
.github/actions/pre-commit-updater/: action.yml
.github/workflows/: pre-commit-updater.yml  publish-pypi.yml  pull-request.yml  tag-n-release.yml
beepbeepbeep/: algebra.py  algebra_test.py  cli.py  hello.py  hello_test.py  satellite.py  satellite_test.py
scripts/: bootstrap  test-nox
tle_sat/: cli.py  satellite.py  satellite_test.py
tle_tools/: algebra_test.py  cli.py  satellite.py  satellite_test.py
