[tool.poetry]
name = "beepbeepbeep"
version = "0.0.0"
description = "EO Satellite TLE tools"
authors = ["Christian Wygoda <christian.wygoda@satellitevu.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
skyfield = "^1.48"
shapely = "^2.0.4"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-coverage = "^0.0"
pre-commit = "^3.7.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E501", "UP007", "UP034"]
select = [
    "C9",
    "E",
    "F",
    "I",
    "W",
    "UP"
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = [
    "**/*_test.py",
    "**/conftest.py",
]

[tool.pytest.ini_options]
addopts="--cov=beepbeepbeep"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
